--- a/about.html
+++ b/about.html
@@ -84,6 +84,7 @@
             <div class="ij-contact_links">
                 <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Mail till Katarina"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
                 <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
+                <a class="btn btn-dark btn-social mx-2" href="tel:" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
             </div>
           </div>
           <div class="col-md-6 ij-section2__img">
@@ -124,6 +125,7 @@
             <div class="ij-contact_links2">
                 <a class="btn btn-dark btn-social mx-2" href="mailto:anna@clearity.nu" aria-label="Mail till Anna"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
                 <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
+                <a class="btn btn-dark btn-social mx-2" href="tel:0709642002" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
             </div>
           </div>
           <div class="col-md-6 ij-section3__img">
