--- a/learn.html
+++ b/learn.html
@@ -36,12 +36,16 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <a href="index.html" class="goBack">Tillbaka till startsidan</a>
+              <a href="index.html#ij-card1" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
               <h1>Lära</h1>
+              <p class="card-text">Kunskapskälla & Utbildningar 
+                <br>
+                <i>Nu börjar resan för resten av ditt liv</i>
+              </p>
               <p>
                 1.	LEVA
                 <br>
-                Halvdags utbildning med Katarina
+                Halvdags utbildning
                 <br>
                 • Kunskap om mekanismerna bakom vårt sinne.
                 <br>
@@ -59,7 +63,7 @@
                  
                 2.	LYSSNA
                 <br>
-                Halvdags workshop med Anna
+                Halvdags workshop
                 <br>
                 •	Lärande om kroppens språk.
                 <br>
@@ -77,9 +81,10 @@
                  <br>
                  <br>
                 Utbildningstillfällen annonseras via hemsida, sociala medier och via vårt månadsbrev.
-                Maila info@clearity.nu om du önskar få vårt månadsbrev.
-                
               </p>
+              <div class="learn-link">
+                <a class="btn btn-dark btn-social mx-2" href="mailto:info@clearity.nu" aria-label="Länk till Katarina på bokadirekt">Boka</a>
+              </div>
             </div>
           </div>
         </div>
