--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lära - Klarhet</title>
+    <title>Om Klarhet - Klarhet</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar - Learn -->
+    <!-- Navbar - About Company -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item"><a class="nav-link" href="index.html" title="Länk till startsidan">Hem</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
+            <li class="nav-item"><a class="nav-link active" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
             <li class="nav-item"><a class="nav-link" href="organisation.html" title="Länk till organisation">Organisation</a></li>
             <li class="nav-item"><a class="nav-link" href="human.html" title="Länk till människa och sinne">Människa och sinne</a></li>
           </ul>
@@ -33,68 +33,31 @@
       </div>
     </nav>
     <main>
-      <section id="learn" class="moreInfoPadding">
-        <div class="container-fluid">
-          <div class="ij-moreInfo learn">
-            <div class="ij-moreInfo__content">
-              <a href="index.html#ij-card1" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+      <!-- About - About Company -->
+      <section id="aboutCompany" class="extraPadding">
+        <div class="container-fluid ij-section">
+          <div class="container-fluid ij-section">
+            <div class="ij-section__heading">
+              <h1>Om Klarhet</h1>
+            </div>
+            <div class="row justify-content-center ij-section__content">
               <div>
-                <h1>Lära</h1>
-                <p class="card-text">
-                  Kunskapskälla & Utbildningar
+                <p>
+                  Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? Orsak och verkan, individualism eller tillsammansskap? Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
                   <br />
-                  <i>Nu börjar resan för resten av ditt liv</i>
+                  <br />
+                  Katarina har lång erfarenhet inom ledarskap, samtal och kommunikation. Oavsett om drivkraften i att utvecklas ligger på det privata planet eller i yrkeslivet är vår erfarenhet att kommunikation och relation är två avgörande parametrar. Katarina arbetar både med människa och med organisation inom kommunikation, relationer, grupputveckling, kultur och värderingar samt med samtal.
+                  <br />
+                  <br />
+                  Anna är sjuksköterska med lång och beprövad erfarenhet från hälsoundersökningar och kroppens fysiologiska karaktäristika. Ökad balans, självinsikt och självledarskap i vardagen med mer lugn och harmoni än ekorrhjul, låter det intressant? Anna guidar dig tryggt och med stort kunnande och stor kompetens på vägen framåt för både kropp och sinne.
                 </p>
-              </div>
-              <p>
-                <b>1. LEVA</b>
-                <br />
-                Halvdags utbildning
-                <br />
-                • Kunskap om mekanismerna bakom vårt sinne.
-                <br />
-                • Självkänsla, finn din unika väg. Hur hittar vi tillbaka till oss själva?
-                <br />
-                • Identifiera ditt mående, är jag på rätt plats och den person jag vill vara?
-                <br />
-                • Vi gör en gemensam resa in i det inre.
-                <br />
-                <br />
-                Våra förväntningar är att du växer som människa, finner din inre röst, skapar hållbara strategier och ger dig själv den självklara platsen som huvudrollen i ditt eget liv.
-
-                <br />
-                <br />
-
-                <b>2. LYSSNA </b>
-                <br />
-                Halvdags workshop
-                <br />
-                • Lärande om kroppens språk.
-                <br />
-                • Vi lär dig lyssna till din kropps signaler och ger dig rätt kunskap för att kunna förstå vad kroppen förmedlar.
-                <br />
-                • Finn balansen i livet.
-                <br />
-                <br />
-                Efter workshopen ser vi med förhoppning på att du förstår vad din kropp kommunicerar, varför du mår som du mår och vilka åtgärder du behöver vidta. Du får kunskapen för att kunna återtar makten över ditt mående och möjligheten att leva det liv du önskar.
-                <br />
-                <br />
-                <b>3. ORGANISATION och LEDARSKAP</b>
-                <br />
-                • Tillhör ni en organisation och är intresserad av vårt utbud så välkomnar vi er att läsa mer under ORGANISATION.
-                <br />
-                <br />
-                Utbildningstillfällen annonseras via hemsida, sociala medier och via vårt månadsbrev.
-              </p>
-              <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="mailto:info@clearity.nu" aria-label="Länk till Katarina på bokadirekt">Boka</a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <!-- Subscription - Learn -->
+    <!-- Subscription - About Company -->
     <section id="subscriptionLetter">
       <div class="container-fluid newsLetter">
         <div class="newsLetter__form">
@@ -110,7 +73,7 @@
         </div>
       </div>
     </section>
-    <!-- Footer - Learn -->
+    <!-- Footer - About Company -->
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
@@ -119,13 +82,13 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok" aria-hidden="true"></i></a>
+                  <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -134,11 +97,11 @@
             <h3 class="text-uppercase mb-2 pb-1">Hitta oss</h3>
             <ul class="fa-ul" style="margin-left: 1.65em">
               <li class="mb-3">
-                <span class="fa-li"><i class="fas fa-home" aria-hidden="true"></i></span><span class="ms-2">Örebro, SE</span>
+                <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
               </li>
               <li class="mb-3">
                 <a href="mailto:info@clearity.nu"
-                  ><span class="fa-li"><i class="fas fa-envelope" aria-hidden="true"></i></span><span class="ms-2">info@clearity.nu</span></a
+                  ><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a
                 >
               </li>
             </ul>
