uppdaterat mer info

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="/read-more-pages/live.html">Läs mer om leva</a>
+                    <a class="link" href="live.html">Läs mer om leva</a>
                     <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -225,7 +225,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="/read-more-pages/hear.html">Läs mer om lyssna</a>
+                    <a class="link" href="listen.html">Läs mer om lyssna</a>
                     <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -244,7 +244,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="/read-more-pages/leadership.html">Läs mer om ledarskap</a>
+                    <a class="link" href="leadership.html">Läs mer om ledarskap</a>
                     <a href="mailto:katarina@clearity.nu" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="/read-more-pages/longing.html">Läs mer om längtan</a>
+                    <a class="link" href="longing.html">Läs mer om längtan</a>
                     <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -280,7 +280,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="/read-more-pages/play.html">Läs mer om leka</a>
+                    <a class="link" href="play.html">Läs mer om leka</a>
                     <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
