--- a/leadership.html
+++ b/leadership.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self Love - Klarhet</title>
+    <title>Ledarskap - Klarhet</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar - Self Love -->
+    <!-- Navbar - Leadership -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
@@ -33,40 +33,44 @@
       </div>
     </nav>
     <main>
-      <section id="selfLove" class="moreInfoPadding">
+      <section id="leadership" class="moreInfoPadding">
         <div class="container-fluid">
-          <div class="ij-moreInfo selfLove">
+          <div class="ij-moreInfo leadership">
             <div class="ij-moreInfo__content">
-              <a href="index.html#ij-card2" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+              <a href="index.html#ij-card6" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
               <div>
-                <h1>Self Love</h1>
+                <h1>Ledarskap</h1>
                 <p class="card-text">
-                  Det börjar med dig själv.
+                  Autensitet, tillsammansskap och resultat. Når du de resultat du önskar?
                   <br />
-                  <i>Autensitet, sanning och värme</i>
+                  <i>Framgång, ledarskap, medarbetarskap, grupp och individ</i>
                 </p>
               </div>
               <p>
-               <b>Samtal med Katarina</b>
+               <b>Ledarskapsutbildning med Katarina</b>
                <br>
-               •	Vi finner svaren till vem du är när du står i ditt sanna jag.
+               •	Bli din egen ledare, utveckla ett gott självledarskap
                <br>
-               •	Vi skapar en stabil grund för dig att stå på när du möter livet.
+               •	Leder du din organisation så som du önskar?
                <br>
-               •	Samtal i kombination med hemuppgifter.
+               •	Kultur för framgångsrika organisationer
+               <br>
+               •	Ledningsgrupps- och grupputveckling
+               <br>
+               •	Goda resultat, tillsammans, på vilket sätt?
                <br>
                <br>
-               Vår förhoppning är att du upplever och känner autensitet, möter din sanning och känner en nyfunnen värme till dig själv.
+               Läs mer under organisation för att ta del av hela vårt utbud. 
               </p>
               <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt">Boka</a>
+                <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Länk till Katarinas mail">Boka</a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <!-- Subscription - Self Love -->
+    <!-- Subscription - Leadership -->
     <section id="subscriptionLetter">
       <div class="container-fluid newsLetter">
         <div class="newsLetter__form">
@@ -82,7 +86,7 @@
         </div>
       </div>
     </section>
-    <!-- Footer - Self Love -->
+    <!-- Footer - Leadership -->
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
