--- a/learn.html
+++ b/learn.html
@@ -87,7 +87,7 @@
                 Utbildningstillfällen annonseras via hemsida, sociala medier och via vårt månadsbrev.
               </p>
               <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="mailto:info@clearity.nu" aria-label="Länk till Katarina på bokadirekt">Boka</a>
+                <a class="btn btn-dark btn-social mx-2" href="mailto:info@clearity.nu" aria-label="Öppnar mail">Boka</a>
               </div>
             </div>
           </div>
