--- a/live.html
+++ b/live.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self Love - Klarhet</title>
+    <title>Leva - Klarhet</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar - Self Love -->
+    <!-- Navbar - Live -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
@@ -33,30 +33,30 @@
       </div>
     </nav>
     <main>
-      <section id="selfLove" class="moreInfoPadding">
+      <section id="live" class="moreInfoPadding">
         <div class="container-fluid">
-          <div class="ij-moreInfo selfLove">
+          <div class="ij-moreInfo live">
             <div class="ij-moreInfo__content">
-              <a href="index.html#ij-card2" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+              <a href="index.html#ij-card4" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
               <div>
-                <h1>Self Love</h1>
+                <h1>Leva</h1>
                 <p class="card-text">
-                  Det börjar med dig själv.
+                  Livet ska levas, inte bara överlevas.
                   <br />
-                  <i>Autensitet, sanning och värme</i>
+                  <i>Styrka, stabilitet och självkänsla</i>
                 </p>
               </div>
               <p>
-               <b>Samtal med Katarina</b>
-               <br>
-               •	Vi finner svaren till vem du är när du står i ditt sanna jag.
-               <br>
-               •	Vi skapar en stabil grund för dig att stå på när du möter livet.
-               <br>
-               •	Samtal i kombination med hemuppgifter.
-               <br>
-               <br>
-               Vår förhoppning är att du upplever och känner autensitet, möter din sanning och känner en nyfunnen värme till dig själv.
+                <b>Samtal med Katarina</b>
+                <br />
+                • Finn tillit till dig själv och dina förmågor?
+                <br />
+                • Vi identifierar gemensamt eventuella hinder och programmeringar som inte gynnar dig.
+                <br />
+                • Ingen är som du, välkommen att möta dig själv.
+                <br />
+                <br />
+                Vår förhoppning är att du finner din inre röst. Kraftfull och stabil. Ditt unika VAD och VARFÖR.
               </p>
               <div class="link">
                 <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt">Boka</a>
@@ -66,7 +66,7 @@
         </div>
       </section>
     </main>
-    <!-- Subscription - Self Love -->
+    <!-- Subscription - Live -->
     <section id="subscriptionLetter">
       <div class="container-fluid newsLetter">
         <div class="newsLetter__form">
@@ -82,7 +82,7 @@
         </div>
       </div>
     </section>
-    <!-- Footer - Self Love -->
+    <!-- Footer - Live -->
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
