--- a/listen.html
+++ b/listen.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self Love - Klarhet</title>
+    <title>Lyssna - Klarhet</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar - Self Love -->
+    <!-- Navbar - Listen -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
@@ -33,40 +33,38 @@
       </div>
     </nav>
     <main>
-      <section id="selfLove" class="moreInfoPadding">
+      <section id="listen" class="moreInfoPadding">
         <div class="container-fluid">
-          <div class="ij-moreInfo selfLove">
+          <div class="ij-moreInfo listen">
             <div class="ij-moreInfo__content">
-              <a href="index.html#ij-card2" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+              <a href="index.html#ij-card5" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
               <div>
-                <h1>Self Love</h1>
+                <h1>Lyssna</h1>
                 <p class="card-text">
-                  Det börjar med dig själv.
+                  Kroppens signaler. Så påverkar du din hälsa.
                   <br />
-                  <i>Autensitet, sanning och värme</i>
+                  <i>Soul, Body and Mind</i>
                 </p>
               </div>
               <p>
-               <b>Samtal med Katarina</b>
-               <br>
-               •	Vi finner svaren till vem du är när du står i ditt sanna jag.
-               <br>
-               •	Vi skapar en stabil grund för dig att stå på när du möter livet.
-               <br>
-               •	Samtal i kombination med hemuppgifter.
-               <br>
-               <br>
-               Vår förhoppning är att du upplever och känner autensitet, möter din sanning och känner en nyfunnen värme till dig själv.
+                <b>Webbaserat samtal med Anna</b>
+                <br />
+                • Livsstilsguidning. Komplett kartläggning av kroppens signaler och livsstilsrelaterade åtgärden och mål.
+                <br />
+                • Du återfår din kraft och möjlighet att påverka din hälsa och skapa det liv du önskar.
+                <br />
+                <br />
+                Vår förhoppning är att du känner en samklang mellan Soul, Body and Mind. Allt hänger ihop och inget fungerar utan det andra.
               </p>
               <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt">Boka</a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt">Boka</a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <!-- Subscription - Self Love -->
+    <!-- Subscription - Listen -->
     <section id="subscriptionLetter">
       <div class="container-fluid newsLetter">
         <div class="newsLetter__form">
@@ -82,7 +80,7 @@
         </div>
       </div>
     </section>
-    <!-- Footer - Self Love -->
+    <!-- Footer - Listen -->
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
