lagt till länk för terms

--- a/organisation.html
+++ b/organisation.html
@@ -75,7 +75,7 @@
           </form>
         </div>
         <div class="newsLetter__text">
-          <p><a href="#">Här</a> kan du läsa mer om vår behandling av dina personuppgifter och om dina rättigheter.</p>
+          <p><a href="terms.html">Här</a> kan du läsa mer om vår behandling av dina personuppgifter och om dina rättigheter.</p>
           <p id="confirmationMessage" style="display: none">Du är nu prenumerant på vårt månadsbrev!</p>
         </div>
       </div>
