--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyssna - Klarhet</title>
+    <title>Villkor - Klarhet</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar - Listen -->
+    <!-- Navbar - Terms -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
@@ -33,38 +33,33 @@
       </div>
     </nav>
     <main>
-      <section id="listen" class="moreInfoPadding">
-        <div class="container-fluid">
-          <div class="ij-moreInfo listen">
-            <div class="ij-moreInfo__content">
-              <a href="index.html#ij-card5" class="goBack"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+      <!-- About - Terms -->
+      <section id="aboutCompany" class="extraPadding">
+        <div class="container-fluid ij-section">
+          <div class="container-fluid ij-section">
+            <div class="ij-section__heading">
+              <h1>Villkor</h1>
+            </div>
+            <div class="row justify-content-center ij-section__content">
               <div>
-                <h1>Lyssna</h1>
-                <p class="card-text">
-                  Kroppens signaler. Så påverkar du din hälsa.
-                  <br />
-                  <i>Soul, Body and Mind</i>
+                <p>
+                  Klarhet behandlar uppgifter om din e-postadress för att kunna skicka månadsbrev till dig. Dina personuppgifter lämnas inte ut till någon annan och alla uppgifter stannar inom EU/EES.
+                  <br>
+                  <br>
+                  All personuppgiftsbehandling sker inom klarhets verksamhet. 
+                  Det innebär att endast vissa bestämmelser i personuppgiftslagstiftningen gäller för behandlingen, t.ex. reglerna som rör säkerhet för personuppgifter. 
+                  Vi gör alltid vårt yttersta för att skydda de personuppgifter vi behandlar genom adekvata säkerhetsåtgärder.
+                  <br>
+                  <br>
+                  Har du frågor om dina personuppgifter kontakta oss på <a href="mailto:info@clearity.nu">info@clearity.nu</a>.
                 </p>
-              </div>
-              <p>
-                <b>Webbaserat samtal med Anna</b>
-                <br />
-                • Livsstilsguidning. Komplett kartläggning av kroppens signaler och livsstilsrelaterade åtgärden och mål.
-                <br />
-                • Du återfår din kraft och möjlighet att påverka din hälsa och skapa det liv du önskar.
-                <br />
-                <br />
-                Vår förhoppning är att du känner en samklang mellan Soul, Body and Mind. Allt hänger ihop och inget fungerar utan det andra.
-              </p>
-              <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt">Boka</a>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <!-- Subscription - Listen -->
+    <!-- Subscription - Terms -->
     <section id="subscriptionLetter">
       <div class="container-fluid newsLetter">
         <div class="newsLetter__form">
@@ -75,12 +70,12 @@
           </form>
         </div>
         <div class="newsLetter__text">
-          <p><a href="terms.html">Här</a> kan du läsa mer om vår behandling av dina personuppgifter och om dina rättigheter.</p>
+          <p><a href="#">Här</a> kan du läsa mer om vår behandling av dina personuppgifter och om dina rättigheter.</p>
           <p id="confirmationMessage" style="display: none">Du är nu prenumerant på vårt månadsbrev!</p>
         </div>
       </div>
     </section>
-    <!-- Footer - Listen -->
+    <!-- Footer - Terms -->
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
@@ -89,13 +84,13 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok" aria-hidden="true"></i></a>
+                  <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -104,11 +99,11 @@
             <h3 class="text-uppercase mb-2 pb-1">Hitta oss</h3>
             <ul class="fa-ul" style="margin-left: 1.65em">
               <li class="mb-3">
-                <span class="fa-li"><i class="fas fa-home" aria-hidden="true"></i></span><span class="ms-2">Örebro, SE</span>
+                <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
               </li>
               <li class="mb-3">
                 <a href="mailto:info@clearity.nu"
-                  ><span class="fa-li"><i class="fas fa-envelope" aria-hidden="true"></i></span><span class="ms-2">info@clearity.nu</span></a
+                  ><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a
                 >
               </li>
             </ul>
