--- a/aboutUs.html
+++ b/aboutUs.html
@@ -78,7 +78,7 @@
             <div class="links links-beige">
               <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Mail till Katarina"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
               <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
-              <a class="btn btn-dark btn-social mx-2" href="tel:" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
+              <a class="btn btn-dark btn-social mx-2" href="tel:0732629095" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
             </div>
           </div>
           <div class="col-lg-6 ij-section-imgAndtext__image">
